<resources>

    <!-- APP STRINGS -->
    <string name="app_version">1.0.0</string> <!-- MAJOR.MINOR.PATH -->
    <string name="app_name">Ayuno</string>
    <string name="app_database">ayuno-app-database</string>

    <!-- MENU STRINGS -->
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Panel</string>
    <string name="title_history">Historial</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_info">Info</string>
    <string name="title_analytics">Metricas</string>
    <string name="title_reset">Eliminar Registros</string>
    <string name="title_report_bug">Reportar error</string>
    <string name="title_daily_reflection">Revision diaria</string>
    <string name="title_health">Salud</string>

    <!-- BUTTONS STRINGS -->
    <string name="btn_start_fasting">Iniciar ayuno</string>
    <string name="btn_end_fasting">Completar ayuno</string>
    <string name="no_desc"> </string>
    <string name="fasting_16_8">16/8</string>
    <string name="fasting_15_9">15/9</string>
    <string name="fasting_14_10">14/10</string>
    <string name="fasting_13_11">13/11</string>
    <string name="fasting_12_12">12/12</string>
    <string name="btn_cancel">Descartar Ayuno</string>
    <string name="label_12_hours_completed">12h</string>
    <string name="label_13_hours_completed">13h</string>
    <string name="label_14_hours_completed">14h</string>
    <string name="label_15_hours_completed">15h</string>
    <string name="label_16_hours_completed">16h</string>
    <string name="label_filter_all">All</string>
    <string name="label_filter_week">Week</string>


    <!-- LABELS STRINGS -->
    <string name="report_bug_label">Descripción:</string>
    <string name="report_switch">Solicitar funcionalidad:</string>
    <string name="btn_send">Enviar</string>
    <string name="goal_label">Goal</string>
    <string name="guardar_label">GUARDAR</string>
    <string name="edad_hint">Edad (solo números)</string>
    <string name="peso_hint">Peso (ej. 72.5)</string>
    <string name="pasos_hint">Pasos (solo enteros)</string>

    <!-- OTHER STRINGS -->
    <string name="contact_mail">guillermo.tzuc@gmail.com</string>
    <string name="mail_subject_new_feature">[Nueva Funcionalidad]</string>
    <string name="mail_subject_bug">[Bug]</string>

</resources>