<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal"
        android:id="@+id/linear_layout">

        <TextView
            android:id="@+id/fasting_16_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center|start"
            android:text="@string/fasting_16_8"
            app:drawableStartCompat="@drawable/winner_icon"
            android:drawablePadding="10dp"/>

        <TextView
            android:id="@+id/fasting_15_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center|start"
            android:text="@string/fasting_15_9"
            app:drawableStartCompat="@drawable/goal_64"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/fasting_14_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center|start"
            android:text="@string/fasting_14_10"
            app:drawableStartCompat="@drawable/goal_64"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/fasting_13_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center|start"
            android:text="@string/fasting_13_11"
            app:drawableStartCompat="@drawable/goal_64"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/fasting_12_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center|start"
            android:text="@string/fasting_12_12"
            app:drawableStartCompat="@drawable/ic_whatshot_24dp"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>