<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.toolbar.ReportBugActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/report_bug_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="textStart"
            android:text="@string/report_bug_label"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/report_edit_text"
            android:inputType="textMultiLine"
            android:lines="8"
            android:minLines="6"
            android:gravity="top|start"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/report_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/report_switch" />

        <Button
            android:id="@+id/btn_send_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_send"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>